# ros2_nav2

robo_world/: CMakeLists.txt  package.xml
robo_world/config/: bridge.yaml
robo_world/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robo_world/install/robo_world/lib/robo_world/: wasd_teleop.py
robo_world/install/robo_world/share/ament_index/resource_index/package_run_dependencies/: robo_world
robo_world/install/robo_world/share/ament_index/resource_index/parent_prefix_path/: robo_world
robo_world/install/robo_world/share/robo_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robo_world/install/robo_world/share/robo_world/cmake/: robo_worldConfig-version.cmake  robo_worldConfig.cmake
robo_world/install/robo_world/share/robo_world/config/: bridge.yaml
robo_world/install/robo_world/share/robo_world/environment/: ament_prefix_path.dsv  path.dsv
robo_world/install/robo_world/share/robo_world/launch/: display.launch.py  nav2.launch.py  sim.launch.py
robo_world/install/robo_world/share/robo_world/urdf/: robot.urdf.xacro
robo_world/install/robo_world/share/robo_world/worlds/: my_world.sdf  my_world2.sdf  simple_world.sdf  simple_world2.sdf
robo_world/launch/: display.launch.py  nav2.launch.py  sim.launch.py
robo_world/scripts/: wasd_teleop.py
robo_world/urdf/: robot.urdf.xacro
robo_world/worlds/: my_world2.sdf  simple_world.sdf  simple_world2.sdf
robot/: CMakeLists.txt  package.xml
robot/launch/: display.launch.py
robot/urdf/: robot_core.urdf.xacro
robot/worlds/: my_world.sdf
ros_nav2/: CMakeLists.txt  package.xml
vehicle_description/: CMakeLists.txt  package.xml
(+8 files in other folders)
